Fix spacing of button on certain queries

--- a/web/src/components/hero/hero.module.css
+++ b/web/src/components/hero/hero.module.css
@@ -73,10 +73,6 @@
   padding: rem(50 0 100);
   position: relative;
   z-index: 3;
-
-  @media ($mdMin) {
-    padding: rem(50 0);
-  }
 }
 
 .homeText {
@@ -120,7 +116,7 @@
   @media ($mdMin) {
     font-size: rem(120);
     line-height: rem(100);
-    margin-bottom: rem(150);
+    margin-bottom: rem(35);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   }
 }
